# prettygraph

./: LICENSE  README.md  main.py  pyproject.toml
templates/: index.html
